Frontend/deployment/manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{baseServiceName}#
  labels:
    app: #{baseServiceName}#
spec:
  replicas: 1
  selector:
    matchLabels:
      app: #{baseServiceName}#
  template:
    metadata:
      labels:
        app: #{baseServiceName}#
    spec:
      containers:
        - name: #{baseServiceName}#
          image: #{containerRegistry}#/#{imageRepository}#:#{Build.BuildNumber}#
          resources:
            requests:
              memory: "#{portal.memory.request}#"
              cpu: "#{portal.cpu.request}#"
            limits:
              memory: "#{portal.memory.limit}#"
              cpu: "#{portal.cpu.limit}#"
      imagePullSecrets:
        - name: #{imagePullSecret}#


        "API_URL": "https://#{api.hostname}#/api/",
      "YOUTUBE_URL": "#{youtube_url}#",
      "YOUTUBE_API_KEY": "#{youtube_api_key}#",
      "YOUTUBE_CHANNEL_ID": "#{youtube_channel_id}#"
